# clearanime-backend

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO  package-lock.json  package.json  top_airing.json  top_anime.json  webpack.config.js
client/: LICENSE  README.md
client/public/: index.html
client/src/: App.jsx
client/src/components/featured/: Featured.jsx  Featured.scss
client/src/components/list/: List.jsx  List.scss
client/src/components/listitem/: ListItem.jsx  ListItem.scss
client/src/components/navbar/: Navbar.jsx  Navbar.scss
client/src/pages/home/: Home.jsx
client/src/pages/watch/: Watch.jsx  Watch.scss
data/: 0  10659  107  10794  1080  1083  10882  10901  1093  10937  1101  111  1144  1160  11843  12499  1344  1456  1474  15649  15815  15895  16027  1666  16706  16762  17113  17121  17211  17339  1826  18429  1886  18989  19157  20045  20207  2040  2045  20785  (+345 more)
src/: index.ts  shader.ts
static/: index.html
web-server/: Cargo.toml
web-server/src/: consts.rs  main.rs  storage.rs
web-server/src/scrape/: animixplay.rs  mod.rs
