[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-files = "0.6.0-beta.15"
actix-web = { version = "4.0.0-beta.21", features = ["rustls"] }
base64 = "0.13"
chashmap = "2.2"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json", "gzip"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["rt-multi-thread", "time"] }